short term fix to minimize padding between tournaments on all tournaments page - they were messing up page alignment now that we have so many past tournaments

--- a/public/template/css/creative.css
+++ b/public/template/css/creative.css
@@ -180,6 +180,10 @@ header .header-content .header-content-inner p {
     color: rgba(255,255,255,.7);
 }
 
+header .header-content .header-content-inner p.tournament-links {
+    margin-bottom: 10px;
+}
+
 @media(min-width:768px) {
     header {
         min-height: 100%;
